# WEB_HW_6

./: README.md  connection.py  create_table.py  create_table.sql  docker_compose.yml  pyproject.toml  select.py  sql_insert.sql  table_filling.py
